# JULES_Fiona

./: .gitignore  README.md  TRIFFID_toy_Fiona.py  debug_coupler_et.py  debug_soil_physics.py  debug_soil_water_balance.py  pyproject.toml
data/: era5_jules_met_ins_metadata.csv  era5_jules_met_ins_metadata_2002-2004.csv
ebm/src/ebm/: equations.py  parameters.py  run_ebm.py
physiology/: physiology.py
physiology/src/physiology/: config.py  equations.py  run_physiology.py  simulation.py  visualization.py
results/era5_simulation/: era5_summary.txt
rothc/src/rothc/: __init__.py  parameters.py  simulation.py
scripts/: analyze_jules_coupling.py  era5_simulation_config.py  era5_simulation_run.py
src/: physiology_ebm.py
src/coupler/: physiology_ebm.py
src/coupler/examples/: run_coupled_model.py
src/coupler/triffid_rothc/: coupler.py  test_coupler.py
src/ebm/: equations.py  pyproject.toml  run_ebm.py  simulation.py
src/julesf/coupler/: coupling_utils.py  fast_models_wrapper.py  jules_master.py  physiology_ebm.py  slow_models_wrapper.py  triffid_rothc.py  triffid_rothc_run.py  triffid_rothc_simulation.py
src/julesf/data/: era5_data_reader.py
src/julesf/ebm/: diagnostics.py  (+4 more)
src/physiology/: pyproject.toml  run_physiology.py  simulation.py  visualization.py
src/rothc/: equations.py  pyproject.toml  run_rothc.py  simulation.py
src/soil/: equations_moisture.py  equations_thermal.py  parameters.py  run_soil.py
src/topmodel/: equation.py
src/triffid/: triffid.py
tests/: test_coupler.py
topmodel/: pyproject.toml
triffid/: pyproject.toml
(+31 files in other folders)
